Fix background and code align

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,12 +4,11 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 1em;
+    height: 150px;
     background-color: #343a40!important;
     color: rgba(255,255,255,.5);
     text-align: center;
     clear: both;
-    margin-top: -1em;
 }
 
 .fa-facebook {
