--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -5,7 +5,6 @@ html,body {
 
 .grid,body {
     display: grid;
-    grid-gap: 10px;
     justify-content: center;
     grid-template-columns: [main-start] 1fr [content-start] minmax(300px, 1000px) [content-end] 1fr [main-end];
     grid-template-rows: 80px auto 150px;
