--- a/public/css/sheet.css
+++ b/public/css/sheet.css
@@ -35,8 +35,9 @@ hr{
 }
 
 .in-box1{
+    background-color: white;
+    opacity: 0.8;
     border: 1px solid black;
-    box-shadow: 5px 5px #888888;
     padding: 10px;
 }
 
